updTED blog meta and populaetd images

--- a/blogsfolder/blog11.html
+++ b/blogsfolder/blog11.html
@@ -55,12 +55,12 @@
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
-
+ <div class="h-entry">
       <section class="blog-content">
         <h1 class="p-name">Further reflection on digital divide</h1>
         <div id="typed-blog"></div>
         <article id="blog-source" >
-            <p>
+            <p class="e-content">
      
 The reading focuses on the digital divide when it comes to class and how it affects internet use. The first level talks about the impact of the lack of access to the internet. The second focuses on how people use digital tools and what skills they have. The third speaks about the outcomes of the previous two.
 
@@ -90,6 +90,7 @@ I think the reading helped me realise that digital inequality isn’t just about
         </article>
         
       </section>
+    </div>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
