--- a/blogsfolder/blog12.html
+++ b/blogsfolder/blog12.html
@@ -55,12 +55,12 @@
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
-
+ <div class="h-entry">
       <section class="blog-content">
         <h1 class="p-name">Decoloniality in my website</h1>
         <div id="typed-blog"></div>
         <article id="blog-source" >
-            <p>
+            <p class="e-content">
      I think I’m failing at bringing decoloniality to my code. The intention of the website is to market myself to a future employee or colleague. The manner in which I’m marketing myself and the things I’m choosing to market, feeds into and is personalised to fit into a colonial power structure. My website is entirely in English. That wasn’t a conscious decision at first; it just felt like the default. It assumes that the people I want to reach speak English and indirectly that the most valuable professional connections are English speaking.
 In choosing only English, I’ve unintentionally made my website inaccessible to many people. I’ve placed value on English-speaking users while overlooking others who may resonate with my work, collaborate with me, or hire me. In doing so, I’ve reinforced a colonial hierarchy of whose languages (and therefore whose experiences) matter most.
 My mindset is from my knowledge coming from a colonial education. The amount of decolonial knowledge I have consumed is a tiny fraction of my knowledge. I am therefore taught to think in a colonial mindset. Hence the content I think is marketable is built to fit in the colonial frame. Additionally the knowledge I’m gaining is still colonial: The tutorials I follow, the YouTube channels I subscribe to, the documentation I rely on all of it assumes a Western framework for technology. This makes it hard to even notice how much of my thinking is shaped by it. As a result, I’m often building for what I think a “professional” website should look like: clean lines and minimal colour. But what if that idea of professionalism is itself rooted in colonial norms?
@@ -79,6 +79,7 @@ I started the next phase of the design process with beginning by planning what I
         </article>
         
       </section>
+    </div>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
