--- a/blogsfolder/blog13.html
+++ b/blogsfolder/blog13.html
@@ -56,12 +56,12 @@
             
         </ul>
       </nav>
-
+ <div class="h-entry">
       <section class="blog-content">
         <h1 class="p-name">What would an ethical internet look like</h1>
         <div id="typed-blog"></div>
         <article id="blog-source" >
-            <p>
+            <p class="e-content">
     I think an ethical internet would be a space in which everyone has access. That includes people regardless of income, location, or background. If only certain people can get online, then it’s not fair or equal. Access is the starting point, without it, people are left out.
     As for content, I think there needs to be moderation. People should be protected from hate speech, discrimination, and targeted harassment. Hoping people will just be ethical on their own is not realistic. The internet is full of people, and not everyone has good intentions. So, some kind of system must be in place to stop harmful content from spreading.
     But at the same time, all voices should still be heard. Freedom of speech matters. That means moderation has to be done carefully. It should not be used to silence people just because they have unpopular views. There need to be rules to make sure moderation does not become censorship. It also should not be driven by personal or political bias. Once that happens, it’s not about safety anymore, it’s about control.
@@ -81,6 +81,7 @@
         </article>
         
       </section>
+    </div>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
