--- a/blogsfolder/blog3.html
+++ b/blogsfolder/blog3.html
@@ -57,12 +57,12 @@
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
-
+<div class="h-entry">
       <section class="blog-content">
         <h1 class="p-name">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</h1>
          <div id="typed-blog"></div>
         <article id="blog-source" >
-          <h2>Development Focus</h2>
+          <h2 class="e-content">Development Focus</h2>
           <p>
             This week I focused on building the bones of my website. I worked on folder structure, traversal between pages, the functionality of jump links, and implementation of images and videos. I focused on the actual HTML “code” this week.
           </p>
@@ -121,7 +121,7 @@
       
         </article>
       </section>
-      
+      </div>
       </section>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
