--- a/blogsfolder/blog5.html
+++ b/blogsfolder/blog5.html
@@ -56,8 +56,9 @@
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
-
+  <div class="h-entry">
       <section class="blog-content">
+      
         <h1 class="p-name">Wireframes and UI Elements for a Professional and Personal Portfolio</h1>
        <div id="typed-blog"></div>
         <article id="blog-source" >
@@ -140,6 +141,7 @@
             
         </article>
       </section>
+    </div>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
