--- a/blogsfolder/blog6.html
+++ b/blogsfolder/blog6.html
@@ -55,8 +55,10 @@
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
+        <div class="h-entry">
       <section class="blog-content">
       <div id="typed-blog"></div>
+    
         <article id="blog-source" >
         <h1 class="p-name">Wireframes and UI Elements for a Professional and Personal Portfolio</h1>       
           <p class="e-content">
@@ -93,6 +95,7 @@
         </article>
        
       </section>
+    </div>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
     <script src="script.js"></script>
