--- a/blogsfolder/blog9.html
+++ b/blogsfolder/blog9.html
@@ -55,13 +55,13 @@
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
-
+  <div class="h-entry">
       <section class="blog-content">
         <h1 class="p-name">Reflection on the Digital Divide </h1>
         <div id="typed-blog"></div>
         <article id="blog-source" >
      
-<p>
+<p class="e-content">
 Digital Divide Widens
 Internet Access is a Fundamental Right. Especially, Amidst a Pandemic
 
@@ -89,6 +89,7 @@ I find the who would set them to be the most interesting question. If each count
         </article>
         
       </section>
+      </div>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
