--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -109,10 +109,11 @@
           <section class="photo-grid">
             <img src="../images/dad.jpg" alt="Portrait of my dad" class="lightbox-target">
             <img src="../images/IMG-20250106-WA0003[1].jpg" alt="My cat" class="lightbox-target">
-                        <img src="../images/dad.jpg" alt="Portrait of my dad" class="lightbox-target">
-            <img src="../images/IMG-20250106-WA0003[1].jpg" alt="My cat" class="lightbox-target">
-                        <img src="../images/dad.jpg" alt="Portrait of my dad" class="lightbox-target">
-            <img src="../images/IMG-20250106-WA0003[1].jpg" alt="My cat" class="lightbox-target">
+            <img src="../images/storm3.jpg" alt="Portrait of my dad" class="lightbox-target">
+            <img src="../images/loki1.jpg" alt="My cat" class="lightbox-target">
+            <img src="../images/loki2.jpg" alt="Portrait of my dad" class="lightbox-target">
+            <img src="../images/mulan1.jpg" alt="My cat" class="lightbox-target">
+             <img src="../images/mulan2.jpg" alt="My cat" class="lightbox-target">
             <div class="cat-fact-content">
               <button onclick="getCatFact()">Get New Fact</button>
               <div id="fact">Click the button to get a cat fact!</div>
