--- a/blogsfolder/blog10.html
+++ b/blogsfolder/blog10.html
@@ -37,6 +37,7 @@
   </nav>
   </header>
  <main>
+   
     <section class="layout">
       <nav class="blog-nav">
         <ul>
@@ -55,12 +56,12 @@
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
-
+ <div class="h-entry"><
       <section class="blog-content">
         <h1 class="p-name">Internet as a Human Right</h1>
         <div id="typed-blog"></div>
         <article id="blog-source" >
-     <p>
+     <p class="e-content">
 The text “Internet Access is a Fundamental Right. Especially, Amidst a Pandemic” explores the idea of internet access becoming a human right. I agree with the points made in support of internet access being recognized as a human right.
 The key issues used to validate this statement are access to information and education, the right to work, and the right to life — all of which are considered human rights [2]. A human right is defined as “rights inherent to all human beings, regardless of race, sex, nationality, ethnicity, language, religion, or any other status.” These are aspects of life that all humans should have access to. The article uses COVID-19 to highlight that during the pandemic, those with internet access were able to attend school digitally and continue their education. They were also kept updated on accurate information related to the virus. This meant their lives and health had a better chance of being protected through access to correct practices, knowledge of doctors, and information about vaccine locations. Additionally, people with internet access were able to find or create work by marketing their services online. Although these examples come from an extreme situation, they help isolate the impact that the internet has on people’s ability to access other human rights. Without it, millions risk being left behind, widening the gap between the digitally connected and the disconnected. This creates a situation where those offline are excluded from essential services and civic participation.
 Based on this, it’s easy to agree with the statement, but I want to look more closely at the implications of making internet access a human right. It would fall on governments to uphold this right. However, many human rights are still being violated around the world [3]. As one article puts it, “the Universal Declaration of Human Rights is still more a dream than reality.” Making internet access a human right might be a step in the right direction toward acknowledging the importance of human rights, but it will not fix the deeper issues it highlights. In today’s world, access to the internet is essential to access the opportunities discussed in the article. However, making it a human right should not be seen as the final goal. There must also be policies ensuring not just access, but quality and affordability. Otherwise, even with official recognition, people in rural or low-income areas may remain excluded due to slow speeds, high costs, or censorship.
@@ -84,6 +85,7 @@ Beyond this, the article poses the question: “What should be the rules governi
         </article>
         
       </section>
+      /div>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
