--- a/blogsfolder/blog4.html
+++ b/blogsfolder/blog4.html
@@ -56,12 +56,12 @@
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
-
+<div class="h-entry">
       <section class="blog-content">
         <h1 class="p-name">A Look at Website Inspirations and Design Preferences</h1>
          <div id="typed-blog"></div>
         <article id="blog-source" >
-          <h2>Reflecting on My Wireframes</h2>
+          <h2 class="h-entry">Reflecting on My Wireframes</h2>
           <p>
             Looking back at the wireframes I originally created, it's clear that I was quite confused about good design practices and what I actually liked about other websites. My initial design was impractical because it didn’t even include a navigation bar. I relied on single links scattered vertically across the page to connect to other sections. Without setting a consistent structure for my website, it became difficult to navigate, and as a result, it lacked functionality.
           </p>
@@ -168,6 +168,7 @@
         </article>
         
       </section>
+    </div>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
