--- a/blogsfolder/blog7.html
+++ b/blogsfolder/blog7.html
@@ -39,6 +39,7 @@
   </header>
 
   <main>
+      <div class="h-entry">
     <section class="layout">
       <nav class="blog-nav">
         <ul>
@@ -136,9 +137,11 @@
         
       </section>
     </section>
+  </div>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
      <button id="backToTop" title="Back to top">↑</button>
+     
   </main>
 
   <footer>
