--- a/blogsfolder/essay1.html
+++ b/blogsfolder/essay1.html
@@ -56,7 +56,7 @@
             
         </ul>
       </nav>
-
+ <div class="h-entry">
       <section class="blog-content">
         <h1 class="p-name">Persuasive Design and Ethics on the Parktown Boys’ High School Website</h1>
         <div id="typed-blog"></div>
@@ -166,6 +166,7 @@
 
         
       </section>
+    </div>
     </section>
       <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
