--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -53,7 +53,7 @@
           <li><a href="blog7.html">Analyzing Website Designs: Johannesburg Zoo and Parktown Boys</a></li>
         </ul>
       </nav>
-
+<div class="h-entry">
       <section class="blog-content">
         <h1>Blogs</h1>
         <h2 class="p-name">Exploring the Internet and My GitHub Experience</h2>
@@ -111,6 +111,9 @@
 
 
     </section>
+    </div>
+    </section>
+    
   </main>
 
      <script src="../scriptsfolder/overall.js"></script>
