--- a/blogsfolder/blog11.html
+++ b/blogsfolder/blog11.html
@@ -53,9 +53,12 @@
           <li><a id="activeBlog"> Further reflection on digital divide</a></li>
           <li><a href="blog12.html"> Decoloniality in my website</a></li>
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
+       <li><a href="blog14.html">Approach to justice and ethics in art and programming practice</a></li>
+            <li><a href="essay2.html">Groks view on white farmer genocide in South Africa</a></li>
+              <li><a href="reflection.html">Reflection on my website</a></li>
         </ul>
       </nav>
- <div class="h-entry">
+
       <section class="blog-content">
         <h1 class="p-name">Further reflection on digital divide</h1>
         <div id="typed-blog"></div>
@@ -90,7 +93,7 @@ I think the reading helped me realise that digital inequality isn’t just about
         </article>
         
       </section>
-    </div>
+    
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
