--- a/blogsfolder/blog3.html
+++ b/blogsfolder/blog3.html
@@ -55,9 +55,12 @@
           <li><a href="blog11.html"> Further reflection on digital divide</a></li>
           <li><a href="blog12.html"> Decoloniality in my website</a></li>
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
+            <li><a href="blog14.html">Approach to justice and ethics in art and programming practice</a></li>
+            <li><a href="essay2.html">Groks view on white farmer genocide in South Africa</a></li>
+              <li><a href="reflection.html">Reflection on my website</a></li>
         </ul>
       </nav>
-<div class="h-entry">
+
       <section class="blog-content">
         <h1 class="p-name">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</h1>
          <div id="typed-blog"></div>
@@ -121,7 +124,7 @@
       
         </article>
       </section>
-      </div>
+   
       </section>
     </section>
      <script src="../scriptsfolder/overall.js"></script>
