--- a/blogsfolder/blog4.html
+++ b/blogsfolder/blog4.html
@@ -54,14 +54,17 @@
           <li><a href="blog11.html"> Further reflection on digital divide</a></li>
           <li><a href="blog12.html"> Decoloniality in my website</a></li>
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
+            <li><a href="blog14.html">Approach to justice and ethics in art and programming practice</a></li>
+            <li><a href="essay2.html">Groks view on white farmer genocide in South Africa</a></li>
+              <li><a href="reflection.html">Reflection on my website</a></li>
         </ul>
       </nav>
-<div class="h-entry">
+
       <section class="blog-content">
         <h1 class="p-name">A Look at Website Inspirations and Design Preferences</h1>
          <div id="typed-blog"></div>
         <article id="blog-source" >
-          <h2 class="h-entry">Reflecting on My Wireframes</h2>
+          <h2>Reflecting on My Wireframes</h2>
           <p>
             Looking back at the wireframes I originally created, it's clear that I was quite confused about good design practices and what I actually liked about other websites. My initial design was impractical because it didn’t even include a navigation bar. I relied on single links scattered vertically across the page to connect to other sections. Without setting a consistent structure for my website, it became difficult to navigate, and as a result, it lacked functionality.
           </p>
@@ -168,7 +171,7 @@
         </article>
         
       </section>
-    </div>
+
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
