--- a/blogsfolder/blog5.html
+++ b/blogsfolder/blog5.html
@@ -54,9 +54,12 @@
           <li><a href="blog11.html"> Further reflection on digital divide</a></li>
           <li><a href="blog12.html"> Decoloniality in my website</a></li>
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
+         <li><a href="blog14.html">Approach to justice and ethics in art and programming practice</a></li>
+            <li><a href="essay2.html">Groks view on white farmer genocide in South Africa</a></li>
+              <li><a href="reflection.html">Reflection on my website</a></li>
         </ul>
       </nav>
-  <div class="h-entry">
+  
       <section class="blog-content">
       
         <h1 class="p-name">Wireframes and UI Elements for a Professional and Personal Portfolio</h1>
@@ -141,7 +144,7 @@
             
         </article>
       </section>
-    </div>
+  
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
