--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <figure>
               <img class="uphoto" src="profilefolder/images/unity.png" alt="unity logo">
               <figcaption>Unity</figcaption>
+               <p>Proficient</p>
             </figure>
           </a>
         </li>
@@ -88,6 +89,7 @@
             <figure>
               <img class="uphoto" src="profilefolder/images/python.png" alt="python logo">
               <figcaption>Python</figcaption>
+               <p>Proficient</p>
             </figure>
           </a>
         </li>
@@ -96,6 +98,7 @@
             <figure>
               <img class="uphoto" src="profilefolder/images/icons8-c++-144-2.png" alt="c++ logo">
               <figcaption>C++</figcaption>
+               <p>Proficient</p>
             </figure>
           </a>
         </li>   
@@ -104,6 +107,7 @@
             <figure>
                 <img src="profilefolder/images/c-sharp.png" alt="c# logo" class="uphoto">
                 <figcaption>C#</figcaption>
+                 <p>Proficient</p>
             </figure>
           </a>
         </li>
@@ -112,6 +116,7 @@
             <figure>
               <img class="uphoto" src="profilefolder/images/html.png"  alt="html logo">
               <figcaption>HTML</figcaption>
+               <p>Intermidiate</p>
             </figure>
             </a>
         </li>
@@ -120,6 +125,7 @@
             <figure>
               <img class="uphoto" src="profilefolder/images/css-3.png"  alt="css logo">
               <figcaption>CSS</figcaption>
+              <p>novice</p>
             </figure>
           </a>
         </li>
