--- a/blogsfolder/blog12.html
+++ b/blogsfolder/blog12.html
@@ -53,9 +53,12 @@
           <li><a href="blog11.html"> Further reflection on digital divide</a></li>
           <li><a id="activeBlog"> Decoloniality in my website</a></li>
           <li><a href="blog13.html">What would an ethical internet look like</a></li>
+        <li><a href="blog14.html">Approach to justice and ethics in art and programming practice</a></li>
+            <li><a href="essay2.html">Groks view on white farmer genocide in South Africa</a></li>
+              <li><a href="reflection.html">Reflection on my website</a></li>
         </ul>
       </nav>
- <div class="h-entry">
+
       <section class="blog-content">
         <h1 class="p-name">Decoloniality in my website</h1>
         <div id="typed-blog"></div>
@@ -79,7 +82,7 @@ I started the next phase of the design process with beginning by planning what I
         </article>
         
       </section>
-    </div>
+  
     </section>
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
