--- a/blogsfolder/essay1.html
+++ b/blogsfolder/essay1.html
@@ -53,11 +53,13 @@
           <li><a href="blog11.html"> Further reflection on digital divide</a></li>
           <li><a href="blog12.html"> Decoloniality in my website</a></li>
             <li><a href="blog13.html">What would an ethical internet look like</a></li>
+              <li><a href="blog14.html">Approach to justice and ethics in art and programming practice</a></li>
+            <li><a href="essay2.html">Groks view on white farmer genocide in South Africa</a></li>
+              <li><a href="reflection.html">Reflection on my website</a></li>
             
         </ul>
       </nav>
- <div class="h-entry">
-      <section class="blog-content">
+       <section class="blog-content">
         <h1 class="p-name">Persuasive Design and Ethics on the Parktown Boys’ High School Website</h1>
         <div id="typed-blog"></div>
        <article class="blog-source">
@@ -166,7 +168,7 @@
 
         
       </section>
-    </div>
+   
     </section>
       <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
