--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -44,16 +44,26 @@
     <section class="layout">
       <nav class="blog-nav">
         <ul>
-          <li><a id ="activeBlog">Exploring the Internet and My GitHub Experience</a></li>
-          <li><a href="blog2.html">Reflecting on Initial Wireframes and Website Structure</a></li>
+           <li><a href="index.html">Exploring the Internet and My GitHub Experience</a></li>
+          <li><a id ="activeBlog">Reflecting on Initial Wireframes and Website Structure</a></li>
           <li><a href="blog3.html">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</a></li>
           <li><a href="blog4.html"> A Look at Website Inspirations and Design Preferences</a></li>
           <li><a href="blog5.html"> Wireframes and UI Elements for a Professional and Personal Portfolio</a></li>
           <li><a href="blog6.html">Designing a Portfolio: Color Palettes, Fonts, and UI Inspirations</a></li>
           <li><a href="blog7.html">Analyzing Website Designs: Johannesburg Zoo and Parktown Boys</a></li>
+          <li><a href="essay1.html"> Dark practices on Parktown boys website</a></li>
+          <li><a href="blog9.html">Reflection on the Digital Divide</a></li>
+          <li><a href="blog10.html">Internet as a Human Right</a></li>
+          <li><a href="blog11.html"> Further reflection on digital divide</a></li>
+          <li><a href="blog12.html"> Decoloniality in my website</a></li>
+          <li><a href="blog13.html">What would an ethical internet look like</a></li>
+
+      <li><a href="blog14.html">What would an ethical internet look like</a></li>
+            <li><a href="essay2.html">What would an ethical internet look like</a></li>
+              <li><a href="reflection.html">What would an ethical internet look like</a></li>
         </ul>
       </nav>
-<div class="h-entry">
+
       <section class="blog-content">
         <h1>Blogs</h1>
         <h2 class="p-name">Exploring the Internet and My GitHub Experience</h2>
@@ -111,7 +121,7 @@
 
 
     </section>
-    </div>
+ 
     </section>
     
   </main>
