--- a/flowerfolder/index.html
+++ b/flowerfolder/index.html
@@ -37,7 +37,7 @@
 
   <main>
     <canvas id="background"></canvas>
-    <a href="../testing/index.html">
+    <a href="../Colourbackground/index.html">
       <button>Go to Testing Page</button>
     </a>
   </main>
@@ -46,8 +46,17 @@
   <script src="script.js"></script>
   <script src="../scriptsfolder/overall.js"></script>
 
-  <footer>
-    <p>Alulu Studios 2025</p>
-  </footer>
+    <footer>
+        
+       <p class="footer-content"> Alulu Studios 2025
+          <div class="footer-icons">
+      <a href="https://github.com/ali-r-glitch" target="_blank" aria-label="GitHub">
+        <img src="images/github-logo-png_seeklogo-304612.png" alt="github" class="icon">
+
+      </a>
+      <a href="https://ali-r-glitch.itch.io/" target="_blank" aria-label="Itch.io">
+        <img src="images/download.png" alt="Itch.io" class="icon">
+      </a>
+    </footer>
 </body>
 </html>
