--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -349,8 +349,17 @@ I attempted to add javascript to fix issues in my website. Firstly I started wit
   <script src="../scriptsfolder/overall.js"></script>
 <button id="backToTop" title="Back to top">↑</button>
 </main>
-<footer>
-    
-Alulu Studios 2025</footer>
+    <footer>
+        
+       <p class="footer-content"> Alulu Studios 2025
+          <div class="footer-icons">
+      <a href="https://github.com/ali-r-glitch" target="_blank" aria-label="GitHub">
+        <img src="images/github-logo-png_seeklogo-304612.png" alt="github" class="icon">
+
+      </a>
+      <a href="https://ali-r-glitch.itch.io/" target="_blank" aria-label="Itch.io">
+        <img src="images/download.png" alt="Itch.io" class="icon">
+      </a>
+    </footer>
 </body>
 </html>
