--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -44,8 +44,8 @@
     <section class="layout">
       <nav class="blog-nav">
         <ul>
-           <li><a href="index.html">Exploring the Internet and My GitHub Experience</a></li>
-          <li><a id ="activeBlog">Reflecting on Initial Wireframes and Website Structure</a></li>
+           <li><a  id ="activeBlog">Exploring the Internet and My GitHub Experience</a></li>
+          <li><a href="blog2.html">Reflecting on Initial Wireframes and Website Structure</a></li>
           <li><a href="blog3.html">User Interface and Experience Design: Crafting a Simple Yet Effective Portfolio</a></li>
           <li><a href="blog4.html"> A Look at Website Inspirations and Design Preferences</a></li>
           <li><a href="blog5.html"> Wireframes and UI Elements for a Professional and Personal Portfolio</a></li>
