--- a/profilefolder/index.html
+++ b/profilefolder/index.html
@@ -43,11 +43,11 @@
         
        <p class="footer-content"> Alulu Studios 2025
           <div class="footer-icons">
-      <a href="https://github.com/ali-r-glitch" target="_blank" aria-label="GitHub">
+      <a href="https://github.com/ali-r-glitch" target="_blank" >
         <img src="images/github-logo-png_seeklogo-304612.png" alt="github" class="icon">
 
       </a>
-      <a href="https://ali-r-glitch.itch.io/" target="_blank" aria-label="Itch.io">
+      <a href="https://ali-r-glitch.itch.io/" target="_blank" >
         <img src="images/download.png" alt="Itch.io" class="icon">
       </a>
     </footer>
