--- a/Colourbackground/index.html
+++ b/Colourbackground/index.html
@@ -27,7 +27,7 @@
           <li><a href="../designfolder/design.html">Design</a></li>
           <li><a href="../devfolder/dev.html">Projects</a></li>
         </ul>
-        <button class="burger nav-toggle" aria-label="Toggle navigation">
+        <button class="burger nav-toggle">
           <div class="line1"></div>
           <div class="line2"></div>
           <div class="line3"></div>
