--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -30,7 +30,7 @@
       <li><a href="../devfolder/dev.html">Projects </a></li>
      
     </ul>
-     <button class="burger nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+     <button class="burger nav-toggle" >
         <div class="line1"></div>
         <div class="line2"></div>
         <div class="line3"></div>
@@ -353,11 +353,11 @@ I attempted to add javascript to fix issues in my website. Firstly I started wit
         
        <p class="footer-content"> Alulu Studios 2025
           <div class="footer-icons">
-      <a href="https://github.com/ali-r-glitch" target="_blank" aria-label="GitHub">
+      <a href="https://github.com/ali-r-glitch" target="_blank" >
         <img src="images/github-logo-png_seeklogo-304612.png" alt="github" class="icon">
 
       </a>
-      <a href="https://ali-r-glitch.itch.io/" target="_blank" aria-label="Itch.io">
+      <a href="https://ali-r-glitch.itch.io/" target="_blank" >
         <img src="images/download.png" alt="Itch.io" class="icon">
       </a>
     </footer>
