--- a/flowerfolder/index.html
+++ b/flowerfolder/index.html
@@ -26,7 +26,7 @@
           <li><a href="../designfolder/design.html">Design</a></li>
           <li><a href="../devfolder/dev.html">Projects</a></li>
         </ul>
-        <button class="burger nav-toggle" aria-label="Toggle navigation">
+        <button class="burger nav-toggle">
           <div class="line1"></div>
           <div class="line2"></div>
           <div class="line3"></div>
@@ -50,11 +50,11 @@
         
        <p class="footer-content"> Alulu Studios 2025
           <div class="footer-icons">
-      <a href="https://github.com/ali-r-glitch" target="_blank" aria-label="GitHub">
+      <a href="https://github.com/ali-r-glitch" target="_blank" >
         <img src="images/github-logo-png_seeklogo-304612.png" alt="github" class="icon">
 
       </a>
-      <a href="https://ali-r-glitch.itch.io/" target="_blank" aria-label="Itch.io">
+      <a href="https://ali-r-glitch.itch.io/" target="_blank" >
         <img src="images/download.png" alt="Itch.io" class="icon">
       </a>
     </footer>
